FrontEnd com Autenticação JWT Bearer Token

--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -4,6 +4,7 @@
       ><strong>ProdutosApp</strong> - Sistema para gerenciamento de produtos</a
     >
     <button
+      *ngIf="autenticado"
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
@@ -14,7 +15,11 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div
+      *ngIf="autenticado"
+      class="collapse navbar-collapse"
+      id="navbarSupportedContent"
+    >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a
@@ -32,7 +37,16 @@
             >Consultar Produtos</a
           >
         </li>
+        <li class="nav-item">
+          <button class="nav-link" aria-current="page" (click)="logout()">
+            Sair do Sistema
+          </button>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
+
+
+
+
